# fc-rs

./: .gitignore  Cargo.toml
src/: freetype.rs  lib.rs
