[package]
name = "fontconfig"
version = "2.13.1"
description = "fontconfig capi simple binding for rust"
authors = ["S.Percentage <Syn.Tri.Naga@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
with-freetype = ["freetype2"]

[dependencies]
libc = "0.2"

[dependencies.freetype2]
git = "https://github.com/Pctg-x8/ft2-rs"
optional = true
